--- a/DhaliProcurement/Views/TenderQuotation/Create.cshtml
+++ b/DhaliProcurement/Views/TenderQuotation/Create.cshtml
@@ -35,14 +35,14 @@
                         </tr>
                         <tr>
                             <td>Specification</td>
-                            <td>
+                            <td colspan="3">
                                 @Html.TextBox("Specs", null, new { @class = "form-control" })
                                 <span class="error" id="Specs_Error"></span>
                             </td>
                         </tr>
                         <tr>
                             <td>Remarks</td>
-                            <td>
+                            <td colspan="3">
                                 @Html.TextBox("TenderRemarks", "", new { @class = "form-control" })
                                 <span class="error" id="TenderRemarks_Error"></span>
                             </td>
