--- a/DhaliProcurement/Views/MaterialRequisition/Create.cshtml
+++ b/DhaliProcurement/Views/MaterialRequisition/Create.cshtml
@@ -23,7 +23,7 @@
                         <tr>
                             <td>Project Name</td>
                             <td>
-                                @Html.DropDownList("ProjectId", null, "--Select--", htmlAttributes: new { @id = "ProjectId", @class = "form-control select2", @style = "width: 500px !important" })
+                                @Html.DropDownList("ProjectId", null, "--Select--", htmlAttributes: new { @id = "ProjectId", @class = "form-control", @style = "width: 500px !important" })
                                 @Html.ValidationMessage("ProjectId", "", new { @class = "text-danger" })
                             </td>
                             <td>Req. No.</td>
@@ -35,7 +35,7 @@
                         <tr>
                             <td>Site Name</td>
                             <td>
-                                @Html.DropDownList("SiteId", null, "--Select--", htmlAttributes: new { @id = "SiteId", @class = "form-control select2", @style = "width: 500px !important" })
+                                @Html.DropDownList("SiteId", null, "--Select--", htmlAttributes: new { @id = "SiteId", @class = "form-control", @style = "width: 500px !important" })
                                 @Html.ValidationMessage("SiteId", "", new { @class = "text-danger" })
                             </td>
                             <td>Requisition Date</td>
@@ -72,7 +72,7 @@
                                     @*<td style="font-size: 15px; font-weight: bold;">Sl. No.</td>*@
                                     <td style="font-weight: bold;">Required Materials</td>
                                     <td>
-                                        @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ItemName", @style = "width: 150px;" })
+                                        @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control", @data_required = "required", @id = "ItemName", @style = "width: 150px;" })
                                     </td>
                                     <td style="font-weight: bold;">Unit</td>
                                     <td>
