--- a/DhaliProcurement/Views/MaterialRequisition/Edit.cshtml
+++ b/DhaliProcurement/Views/MaterialRequisition/Edit.cshtml
@@ -56,7 +56,7 @@
                             <td>Site Name</td>
                             <td>
                                 @*@Html.DropDownList("SiteId", null, "--Select--", htmlAttributes: new { @id = "SiteId", @class = "form-control select2", @style = "width: 500px !important" })*@
-                                <input type="text" value="@ViewBag.SiteName" class="form-control" disabled="disabled" />
+                                <input type="text" value="@ViewBag.SiteName" class="form-control" disabled="disabled"  style="width:500px;"/>
                                 <input type="hidden" value="@ViewBag.SiteId" id="SiteId" />
                                 @Html.ValidationMessage("SiteId", "", new { @class = "text-danger" })
                             </td>
@@ -96,7 +96,7 @@
                                     @*<td style="font-size: 15px; font-weight: bold;">Sl. No.</td>*@
                                     <td style="font-weight: bold;">Required Materials</td>
                                     <td>
-                                        @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ItemName", @style = "width: 150px;" })
+                                        @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control", @data_required = "required", @id = "ItemName" })
                                     </td>
                                     <td style="font-weight: bold;">Unit</td>
                                     <td>
