--- a/DhaliProcurement/Views/ProcProjects/Create.cshtml
+++ b/DhaliProcurement/Views/ProcProjects/Create.cshtml
@@ -23,7 +23,7 @@
                         <tr>
                             <td>Project Name</td>
                             <td>
-                                @Html.DropDownList("ProjectId", null, "--Select--", htmlAttributes: new { @id = "ProjectId", @class = "form-control select2", @style = "width: 500px !important" })
+                                @Html.DropDownList("ProjectId", null, "--Select--", htmlAttributes: new { @id = "ProjectId", @class = "form-control", @style = "width: 500px !important" })
                                 @Html.ValidationMessage("ProjectId", "", new { @class = "text-danger" })
                             </td>
                             <td>Project Start Date</td>
@@ -34,7 +34,7 @@
                         <tr>
                             <td>Site Name</td>
                             <td>
-                                @Html.DropDownList("SiteId", null, "--Select--", htmlAttributes: new { @id = "SiteId", @class = "form-control select2", @style = "width: 500px !important" })
+                                @Html.DropDownList("SiteId", null, "--Select--", htmlAttributes: new { @id = "SiteId", @class = "form-control", @style = "width: 500px !important" })
                                 @Html.ValidationMessage("SiteId", "", new { @class = "text-danger" })
                             </td>
                             <td>Project End Date</td>
@@ -133,13 +133,13 @@
                                 <td style="font-weight: bold;" class="col-lg-2">Qty</td>
                                 <td style="font-weight: bold;" class="col-lg-1">Unit</td>
                                 <td style="font-weight: bold;" class="col-lg-2">Cost</td>
-                                <td style="font-weight: bold;" class="col-lg-3">Remarks</td>
-                                <td>&nbsp;</td>
+                                <td style="font-weight: bold;" class="col-lg-2">Remarks</td>
+                                <td class="col-lg-1">&nbsp;</td>
                             </tr>
                             <tr>
 
                                 <td>
-                                    @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ItemName", @style = "width: 150px;" })
+                                    @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control", @data_required = "required", @id = "ItemName"})
                                     @*<span class="error">Item name required</span>*@
                                 </td>
                                 <td>
@@ -147,7 +147,7 @@
                                     @*<span class="error">Valid quantity required</span>*@
                                 </td>
                                 <td>
-                                    @Html.DropDownList("Unit", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @style = "width: 150px;" })
+                                    @Html.DropDownList("Unit", null, "--Select--", htmlAttributes: new { @class = "form-control", @data_required = "required" })
                                     @*<span class="error">Unit required</span>*@
                                 </td>
                                 <td>
@@ -157,8 +157,6 @@
                                 <td>
                                     @*<input type="text" id="ItemRemarks" class="form-control" />*@
                                     <textarea id="ItemRemarks" class="form-control" rows="1"></textarea>
-
-
                                 </td>
                                 <td>
                                     <input type="button" id="addNewRow" value="+" class="btn btn-primary" style="background-color: grey;border: none;" />
@@ -170,6 +168,7 @@
                                 <td><span class="error" id="UnitName_Error">Unit required</span></td>
                                 <td><span class="error" id="Costing_Error">Cost required</span><span class="error" id="CostMax_Error"></span></td>
                                 <td><span class="error" id="ItemRemarks_Error"></span></td>
+                                <td></td>
                             </tr>
                         </table>
 
