--- a/DhaliProcurement/Views/ProcProjects/Edit.cshtml
+++ b/DhaliProcurement/Views/ProcProjects/Edit.cshtml
@@ -145,12 +145,12 @@
                                 <td style="font-weight: bold;" class="col-lg-2">Qty</td>
                                 <td style="font-weight: bold;" class="col-lg-1">Unit</td>
                                 <td style="font-weight: bold;" class="col-lg-2">Cost</td>
-                                <td style="font-weight: bold;" class="col-lg-3">Remarks</td>
-                                <td>&nbsp;</td>
+                                <td style="font-weight: bold;" class="col-lg-2">Remarks</td>
+                                <td class="col-lg-1">&nbsp;</td>
                             </tr>
                             <tr>
                                 <td>
-                                    @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ItemName", @style = "width: 150px;" })
+                                    @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control", @data_required = "required", @id = "ItemName"})
                                     @*<span class="error">Item name required</span>*@
                                 </td>
                                 <td>
@@ -158,7 +158,7 @@
                                     @*<span class="error">Valid quantity required</span>*@
                                 </td>
                                 <td>
-                                    @Html.DropDownList("Unit", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @style = "width: 150px;" })
+                                    @Html.DropDownList("Unit", null, "--Select--", htmlAttributes: new { @class = "form-control", @data_required = "required"})
                                     @*<span class="error">Unit required</span>*@
                                 </td>
                                 <td>
