New Design Project ->Create sweet alert

--- a/DhaliProcurement/Views/Projects/Create.cshtml
+++ b/DhaliProcurement/Views/Projects/Create.cshtml
@@ -603,7 +603,8 @@
 
 
             if ($('.Resource-list tr').length < 2) {
-                alert('Please add site to this Project');
+                //alert('Please add site to this Project');
+                swal('Please add site to this Project');
                 isValid = false;
             }
 
